[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers-redis"
dynamic = ["version"]
description = "Module for working with redis"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Alexander Malev", email = "malev@somedev.ru" },
]
keywords = [
    "aioworkers",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aioworkers>=0.27.0",
    "redis>=4.3",
]
[project.optional-dependencies]
dev-test = [
    "aioworkers==0.27.0",
    "coverage[toml]==7.6.9",
    "pytest==8.3.4",
    "pytest-aioworkers[asyncio]==0.4.0",
    "pytest-mock==3.14.0",
    "pyyaml==6.0.2",
]
dev-lint = [
    "ruff==0.8.3",
    "mypy==1.13.0",
    "types-redis==4.6.0.20241004",
]

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers-redis"
Documentation = "https://github.com/aioworkers/aioworkers-redis#readme"
Issues = "https://github.com/aioworkers/aioworkers-redis/issues"
Source = "https://github.com/aioworkers/aioworkers-redis"

[tool.hatch.version]
path = "aioworkers_redis/__init__.py"

[tool.hatch.build]
include = [
    "/aioworkers_redis",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.8",
    "3.9",
    "3.10",
    "3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "aioworkers_redis",
    "tests",
]
addopts = [
    "--doctest-modules",
]

[tool.coverage.run]
branch = false
parallel = false
source = [
    "aioworkers_redis",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
extend-ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.hatch.envs.lint]
python = "3.8"
features = [
    "dev-lint",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:aioworkers_redis tests}"
style = [
    "ruff check {args:aioworkers_redis tests}",
    "ruff format --check --diff {args:aioworkers_redis tests}",
]
fmt = [
    "ruff check --fix {args:aioworkers_redis tests}",
    "ruff format {args:aioworkers_redis tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
