[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aioworkers-redis"
dynamic = ["version"]
description = "Module for working with redis"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Alexander Malev", email = "malev@somedev.ru" },
]
keywords = [
    "aioworkers",
    "redis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aioworkers>=0.28.0",
]
[project.optional-dependencies]
redis-rs = ["redis-rs>=0.15"]
redis-py = ["redis>=4.3"]
aioredis = ["aioredis<2"]
dev-test = [
    "aioworkers==0.28.0",
    "coverage[toml]==7.9.2",
    "pytest-timeout>=2.3.1",
    "pytest==8.3.5",
    "pytest-aioworkers[asyncio]==0.5.0",
    "pytest-mock==3.14.0",
    "pyyaml==6.0.2",
]
dev-lint = [
    "ruff==0.12.8",
    "mypy==1.14.1",
]

[project.entry-points.aioworkers_redis]
redis-rs = "aioworkers_redis.adapter_redis_rs:AdapterRedisRS[redis-rs]"
redis-py = "aioworkers_redis.adapter_redis_py:AdapterRedisPy[redis]"
aioredis = "aioworkers_redis.adapter_aioredis:AdapterAioRedis[aioredis]"

[project.urls]
Homepage = "https://github.com/aioworkers/aioworkers-redis"
Documentation = "https://github.com/aioworkers/aioworkers-redis#readme"
Issues = "https://github.com/aioworkers/aioworkers-redis/issues"
Source = "https://github.com/aioworkers/aioworkers-redis"

[tool.hatch.version]
path = "aioworkers_redis/__init__.py"

[tool.hatch.build]
include = [
    "/aioworkers_redis",
]

[tool.hatch.envs.default]
features = [
    "dev-test",
    "redis-rs",
    "redis-py",
    "aioredis",
]
[tool.hatch.envs.default.scripts]
cov = [
    "coverage run -m pytest",
    "coverage report",
]

[[tool.hatch.envs.all.matrix]]
python = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 2
testpaths = [
    "aioworkers_redis",
    "tests",
]
addopts = [
    "--doctest-modules",
]

[tool.coverage.run]
branch = false
parallel = false
source = [
    "aioworkers_redis",
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
extend-ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pytest",
    "aioredis",
]
ignore_missing_imports = true

[tool.hatch.envs.lint]
python = "3.9"
features = [
    "dev-lint",
    "redis-rs",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:aioworkers_redis tests}"
style = [
    "ruff check {args:aioworkers_redis tests}",
    "ruff format --check --diff {args:aioworkers_redis tests}",
]
fmt = [
    "ruff check --fix {args:aioworkers_redis tests}",
    "ruff format {args:aioworkers_redis tests}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.hatch.envs.template]
detached = true
dependencies = [
    "scaraplate",
]
[tool.hatch.envs.template.scripts]
update = [
    "scaraplate rollup --no-input {args:../cookiecutter-aioworkers-plugin} ."
]
clone = [
    "git clone https://github.com/aioworkers/cookiecutter-aioworkers-plugin {args:../cookiecutter-aioworkers-plugin}"
]
